<resources>
    <string name="app_name">Projekt Aplikacja mobilna</string>
    <string name="zaloguj">ZALOGUJ</string>
    <string name="login">Login</string>
    <string name="asset">ASSET</string>
    <string name="haslo">Hasło</string>
    <string name="dostepne_inwentaryzacje">Dostępne inwentaryzacje:</string>
    <string name="rozpocznij_inwentaryzacje">ROZPOCZNIJ INWENTARYZACJĘ</string>
    <string name="inwentaryzacja">INWENTARYZACJA</string>
    <string name="tak">TAK</string>
    <string name="czy_przedmiot_znajduje_si_w_podanej_lokalizacji">Czy przedmiot znajduje się w podanej lokalizacji?</string>
    <string name="nie">NIE</string>
    <string name="lokalizacja">LOKALIZACJA</string>
    <string name="nazwa_przedmiotu">NAZWA PRZEDMIOTU</string>
    <string name="zdj_cie_przedmiotu">zdjęcie przedmiotu</string>
    <string name="textview">TextView</string>
    <string name="skanuj_kod">Skanuj Kod</string>
    <string name="notatka">Notatka</string>
    <string name="nast_pny">Następny</string>
    <string name="podaj_ilo">Podaj Ilość</string>
    <string name="brak">Brak</string>
    <string name="item_image">item image</string>
    <string name="post_p_inwentaryzacji">Postęp inwentaryzacji</string>
    <string name="wybierz_pomieszcznie_do_przeprowadzenia_inwentaryzacji">Wybierz pomieszcznie do przeprowadzenia inwentaryzacji</string>
</resources>
